--- a/index.css
+++ b/index.css
@@ -1,190 +1,137 @@
-* {
+*{
     box-sizing: border-box;
-    padding: 0;
-    margin: 0;
 }
-
-body {
-    background-color: hsl(233, 47%, 7%);
-    transition: 0.3s;
-    font-family: 'Inter', sans-serif;
-    padding: 0;
-    margin: 0;
+body{
+    font-family: sans-serif;
+    background-color: #ccc;
+  
+    
 }
-
-.main .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.main .container .box {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    justify-content: center;
-    align-items: center;
-    background-color: hsl(244, 38%, 16%);
-    border-radius: 6px;
-    width: 900px;
-    height: 100%;
-}
-
-.main .container .box .left {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    align-self: stretch;
-    gap: 30px;
-    padding: 50px;
-}
-
-.main .container .box .text {
-    color: white;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-}
-
-.main .container .box .text h3 {
-    font-weight: 600;
-    font-size: 28px;
-}
-
-.main .container .box .text span {
-    color: hsl(277, 64%, 61%);
-}
-
-.main .container .box .text p {
-    color: hsla(0, 0%, 100%, 0.75);
-    font-size: 15px;
-}
-
-.main .container .box .left .flex {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 5px;
-}
-
-.main .container .box .left .flex .part {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-}
-
-.main .container .box .left .flex .part div {
-    font-size: 20px;
-    color: #fff;
-    font-weight: 600;
-}
-
-.main .container .box .left .flex .part p {
-    color: hsla(0, 0%, 100%, 0.75);
-    font-size: 15px;
-}
-
-.main .container .box .image {
+.main{
+    width: 100%;
+    height: 500px;
+    background-color: #19a1ad;
+    margin-top: 100px;
+    display: block;
+    width: 700px;
     position: relative;
-    width: 100%;
-    height: 100%;
+    transform: translateX(-50%);
+    left: 50%;
+    overflow: hidden;
+    
 }
+.container{
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto; 
+    background-color: white;
+    display: grid;
+    border-radius: 10px;
+    /* box-shadow: 0px 0px 3px 1px black; */
+    width: 300px;
+    height: 350px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 
-.main .container .box .image img {
-    width: 100%;
-    height: 100%;
-    border-radius: 0 6px 6px 0;
-    transition: 0.3s;
 }
-
-.main .container .box .image::after {
+.main::before{
     content: "";
-    background-color: #9a51c6;
-    height: 100%;
-    width: 100%;
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    background-image: url("file:///F:/Mahmoud/computer-science/projects/frontend%20mentor/profile-card-component-main/images/bg-pattern-top.svg");
     position: absolute;
-    top: 0;
-    border-radius: 0 6px 6px 0;
-    left: 0;
+    z-index: 0;
+    left: -170px;
+    top: -120px;
+}
+.main::after{
+    content: "";
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    background-image: url("file:///F:/Mahmoud/computer-science/projects/frontend%20mentor/profile-card-component-main/images/bg-pattern-bottom.svg");
+    position: absolute;
+    z-index: 0;
+    right: -100px;
+    bottom: -100px;
+}
+.head {
+    display: grid;
+    transition: 0.3s;
+    line-height: 2;
+  
+
+}
+.head .content{
+    color: black;
+    font-weight: 800;
+}
+.head .content span{
+    opacity: 0.5;
+    font-size: 18px;
+    font-weight: 600;
+}
+.head div{
+    text-align: center;
     opacity: 0.5;
 }
-
-@media(max-width:992px) {
-    .main .container .box {
-        grid-template-columns: repeat(2, 1fr);
-        border-radius: 6px;
-        width: 750px;
-    }
-    .main .container .box .left {
-        gap: 25px;
-        padding: 40px;
-    }
-    .main .container .box .text h3 {
-        font-size: 25px;
-    }
-    .main .container .box .text p,
-    .main .container .box .left .flex .part p {
-        font-size: 13px;
-    }
-    .main .container .box .left .flex {
-        display: flex;
-        justify-content: space-between;
-    }
-    .main .container .box .left .flex .part {
-        display: grid;
-    }
-    .main .container .box .left .flex .part div {
-        font-size: 18px;
-    }
-    .main .container .box .image img {
-        border-radius: 0 5px 5px 0;
-    }
-    .main .container .box .image::after {
-        border-radius: 0 5px 5px 0;
-    }
+.head img{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    position: relative;
+    left: 50%;
+    margin-top:100px;
+    transform: translateX(-50%);
+    display: flex;
+    border: 5px solid #ffff;
+  
 }
-
-@media(max-width:768px) {
-    .main .container .box {
-        grid-template-columns: repeat(1, 1fr);
-        border-radius: 5px;
-        width: 400px;
-    }
-    .main .container .box .left {
-        gap: 30px;
-        padding: 60px;
-        order: 2;
-    }
-    .main .container .box .text {
-        text-align: center;
-    }
-    .main .container .box .text h3 {
-        font-size: 25px;
-    }
-    .main .container .box .text p,
-    .main .container .box .left .flex .part p {
-        font-size: 14px;
-    }
-    .main .container .box .left .flex {
-        display: grid;
-        justify-content: center;
-        gap: 30px;
-    }
-    .main .container .box .left .flex .part {
-        text-align: center;
-    }
-    .main .container .box .image {
-        height: 300px;
-    }
-    .main .container .box .image img {
-        border-radius: 0 3px 3px 0;
-    }
-    .main .container .box .image::after {
-        border-radius: 0 3px 3px 0;
-    }
+.head::before{
+    content: "";
+    background-image: url("file:///F:/Mahmoud/computer-science/projects/frontend%20mentor/profile-card-component-main/images/bg-pattern-card.svg");
+    width: 100%;
+    position: absolute;
+    height: 140px;
+    z-index: -1;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+.sec{
+    display: flex;
+    position: relative;
+    left:50%;
+    top: -30px;
+    transform: translateX(-50%);
+}
+.sec::before{
+    content: "";
+    height: 1px;
+    width: 110%;
+    position: absolute;
+    background-color: #DDD;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 50px;
+}
+.sec .one{
+    margin-left: 35px;
+    text-align: center;
+    margin-top: 80px;
+    padding-bottom: 25px;
+ 
+}
+.sec .one
+div:first-child{
+    font-weight: 700;
+    font-size:15px;
+}
+.sec .one
+div:last-child{
+    font-weight: 700;
+    font-size: 10px;
+    opacity: 0.5;
 }
