--- a/index.css
+++ b/index.css
@@ -1,137 +1,170 @@
-*{
+* {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
-body{
-    font-family: sans-serif;
-    background-color: #ccc;
-  
-    
-}
-.main{
-    width: 100%;
-    height: 500px;
-    background-color: #19a1ad;
-    margin-top: 100px;
-    display: block;
-    width: 700px;
-    position: relative;
-    transform: translateX(-50%);
-    left: 50%;
-    overflow: hidden;
-    
-}
-.container{
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto; 
-    background-color: white;
-    display: grid;
-    border-radius: 10px;
-    /* box-shadow: 0px 0px 3px 1px black; */
-    width: 300px;
-    height: 350px;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
 
-}
-.main::before{
-    content: "";
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    background-image: url("file:///F:/Mahmoud/computer-science/projects/frontend%20mentor/profile-card-component-main/images/bg-pattern-top.svg");
-    position: absolute;
-    z-index: 0;
-    left: -170px;
-    top: -120px;
-}
-.main::after{
-    content: "";
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    background-image: url("file:///F:/Mahmoud/computer-science/projects/frontend%20mentor/profile-card-component-main/images/bg-pattern-bottom.svg");
-    position: absolute;
-    z-index: 0;
-    right: -100px;
-    bottom: -100px;
-}
-.head {
-    display: grid;
+body {
+    background-color: hsl(233, 47%, 7%);
     transition: 0.3s;
-    line-height: 2;
-  
+    font-family: 'Inter', sans-serif;
+    padding: 0;
+    margin: 0;
+}
 
+.main .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
-.head .content{
-    color: black;
-    font-weight: 800;
+
+.main .container .box {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
+    background-color: hsl(244, 38%, 16%);
+    border-radius: 6px;
+    width: 1440px;
+    height: 100%;
 }
-.head .content span{
-    opacity: 0.5;
+
+.main .container .box .left {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+    gap: 30px;
+    padding: 70px;
+}
+
+.main .container .box .text {
+    color: white;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.main .container .box .text h3 {
+    font-weight: 600;
+    font-size: 50px;
+}
+
+.main .container .box .text span {
+    color: hsl(277, 64%, 61%);
+}
+
+.main .container .box .text p,
+.main .container .box .left .flex .part p {
+    color: hsla(0, 0%, 100%, 0.75);
     font-size: 18px;
+}
+
+.main .container .box .left .flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5px;
+}
+
+.main .container .box .left .flex .part {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.main .container .box .left .flex .part div {
+    font-size: 25px;
+    color: #fff;
     font-weight: 600;
 }
-.head div{
-    text-align: center;
-    opacity: 0.5;
-}
-.head img{
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
+
+.main .container .box .image {
     position: relative;
-    left: 50%;
-    margin-top:100px;
-    transform: translateX(-50%);
-    display: flex;
-    border: 5px solid #ffff;
-  
+    width: 100%;
+    height: 100%;
 }
-.head::before{
+
+.main .container .box .image img {
+    width: 100%;
+    height: 100%;
+    border-radius: 0 6px 6px 0;
+    transition: 0.3s;
+}
+
+.main .container .box .image::after {
     content: "";
-    background-image: url("file:///F:/Mahmoud/computer-science/projects/frontend%20mentor/profile-card-component-main/images/bg-pattern-card.svg");
+    background-color: #9a51c6;
+    height: 100%;
     width: 100%;
     position: absolute;
-    height: 140px;
-    z-index: -1;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-}
-.sec{
-    display: flex;
-    position: relative;
-    left:50%;
-    top: -30px;
-    transform: translateX(-50%);
-}
-.sec::before{
-    content: "";
-    height: 1px;
-    width: 110%;
-    position: absolute;
-    background-color: #DDD;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-top: 50px;
-}
-.sec .one{
-    margin-left: 35px;
-    text-align: center;
-    margin-top: 80px;
-    padding-bottom: 25px;
- 
-}
-.sec .one
-div:first-child{
-    font-weight: 700;
-    font-size:15px;
-}
-.sec .one
-div:last-child{
-    font-weight: 700;
-    font-size: 10px;
+    top: 0;
+    border-radius: 0 6px 6px 0;
+    left: 0;
     opacity: 0.5;
+}
+
+@media(max-width:992px) {
+    .main .container .box {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        width: 992px;
+    }
+    .main .container .box .left {
+        gap: 30px;
+        padding: 60px;
+    }
+    .main .container .box .text {
+        gap: 10px;
+    }
+    .main .container .box .text h3 {
+        font-size: 40px;
+    }
+    .main .container .box .text p,
+    .main .container .box .left .flex .part p {
+        font-size: 15px;
+    }
+    .main .container .box .left .flex {
+        display: flex;
+        justify-content: space-between;
+        gap: 10px;
+    }
+    .main .container .box .left .flex .part div {
+        font-size: 22px;
+    }
+    .main .container .box .image {
+        height: 100%;
+    }
+}
+
+@media(max-width:768px) {
+    .main .container .box {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        width: 720px;
+    }
+    .main .container .box .left {
+        gap: 30px;
+        padding: 50px;
+    }
+    .main .container .box .text h3 {
+        font-size: 30px;
+    }
+    .main .container .box .left .flex {
+        display: grid;
+        justify-content: center;
+        gap: 30px;
+    }
+    .main .container .box .left .flex .part div {
+        font-size: 20px;
+    }
+    .main .container .box .image {
+        height: 300px;
+    }
 }
